[package]
name = "nonnative"
version = "0.0.4"
authors = [
    "Weikeng Chen",
    "Alessandro Chiesa",
    "Emma Dauterman",
    "Nicholas Ward"
]
description = "Constraints for nonnative field gadgets"
homepage = "https://libzexe.org"
repository = "https://github.com/scipr/zexe"
documentation = "https://docs.rs/zexe/"
keywords = ["r1cs", "nonnative"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "tests", "README.md"]
license = "MIT/Apache-2.0"
edition = "2018"

[profile.release]
debug = true

[profile.test]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
lto = "fat"
incremental = true
debug = false
rpath = false
debug-assertions = false

################################# Dependencies ################################

[dependencies]
rand = "0.7"
derivative = "2"

tracing-subscriber = { version = "0.2" }
tracing = { version = "0.1", default-features = false }

algebra = { git = "https://github.com/weikengchen/zexe/", default-features = false, features = [ "bls12_381", "mnt4_298", "mnt4_753", "mnt6_298", "mnt6_753" ] }
algebra-core = { git = "https://github.com/weikengchen/zexe/" }
rand_core = { version = "0.5" }
r1cs-core = { git = "https://github.com/weikengchen/zexe/" }
r1cs-std = { git = "https://github.com/weikengchen/zexe/" }
num-traits = { version = "0.2", default-features = false }
num-bigint = "0.3.0"

[dev-dependencies]
criterion = "0.3"
rand_xorshift = { version = "0.2" }
paste = "0.1"

[[bench]]
name = "nonnative-bench"
path = "benches/bench.rs"
harness = false